r2/r2/public/static/css/reddit.less
/* ... */
.user-jumped-to {
    border-radius: 5px;
    -moz-border-radius: 5px;
    border: 1px solid #DDF;
    display: inline-block;
    margin-top: 10px;
    padding: 10px 15px;
    background-color: #EEF;
}

.submit_text {
    display: none;
    max-height: 250px;
    overflow: auto;

    ol, ul {
        margin: 0;
        margin-left: 2em;
    }

    &.working .content:before {
        content: "";
        width: 16px;
        height: 16px;
        display: block;
        background-image: url(../throbber.gif); 
    }

    h1 {
        color: rgb(51, 102, 153);
        display: block;
        font-size: 16px;
        font-weight: bold;
    }

    .content {
        margin: 0;

        p {
            word-wrap: break-word;
            clear: both;
        }
    }

    &.enabled {
        display: inline-block;
    }
}

.hover-bubble.save-selector  {
    label {
        display: block;
        font-weight: bold;
        margin-left: 5px;
        font-size: 10px;
    }
    .savedcategory {
        border: 1px solid #ccc;
        padding: 1px 3px;
        margin: 0 2px;
    }
    display: none;
}

.save-category {
    &.hidden {
        display: none;
    }
    margin-left: 2px;
    background-color: #DDF;
    padding: 2px 5px;
    border-radius: 5px;
    -moz-border-radius: 5px;
}

#adminnotes-form {
    textarea {
        width: 285px;
    }

    .notes-button {
        margin: 3px 0px;
        display: block;
    }
}

#past-notes {
    overflow-y: auto;
    max-height: 150px;

    li.adminnote {
        border-top: 1px solid black;
        overflow-x: auto;
    }

    .adminnote-info {
        text-align: right;
        font-size: small;
        font-style: italic;
    }
}

.trending-subreddits {
    margin-top: -4px;
    line-height: 1.75em;

    // the combined padding/margins of .link and .midcol
    margin-left: 17px;
    body.compressed-display & {
        margin-left: 15px;
        padding-left: 15px;
    }

    // hax to align trending subreddits list with links/thumbnails
    // this uses the overflow:hidden trick to create a block formatting context
    // to shift the left edge of the trending subreddits list over
    .rank-spacer, .midcol-spacer {
        float: left;
        height: 1px;
    }

    .trending-subreddits-content {
        overflow: hidden;
    }

    strong {
        color: #29541c;

        &:before {
            height: 14px;
            width: 14px;
            display: inline-block;
            content: " ";
            margin-right: 5px;
            background-image: url(../trending.png); /* SPRITE */
            vertical-align: middle;
        }
    }

    ul {
        display: inline;
    }

    li {
        display: inline-block;
        margin-left: 0.5em;
    }

    li:first-child {
        margin-left: 0;
    }

    ul, .comments {
        margin-left: 1em;
    }

    .comments {
        color: #888;
        font-weight: bold;
    }
}

